--- a/public/pages/shop.html
+++ b/public/pages/shop.html
@@ -2,153 +2,152 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop | Milk Store</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../css/mystyles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shop | Milk Store</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="../css/mystyles.css">
 </head>
 
 <body>
-    <div class="header">
-        <a href="../index.html">
-            <img src="../images/milkstore-logo.svg" alt="milk" id="start">
-        </a>
-        <div class="linka">
-            <a href="shop.html" class="active">
-                <h4>Shop Milk</h4>
-            </a>
-            <a href="about.html">
-                <h4>About Our Milk</h4>
-            </a>
-            <a href="form.html">
-                <h4>Contact Us</h4>
-            </a>
-        </div>
+  <header>
+    <a href="../index.html">
+      <img src="../images/milkyway-logo.png" alt="MilkyWay logo">
+    </a>
+    <nav>
+      <a href="shop.html" class="active">
+        <h4>Shop Milk</h4>
+      </a>
+      <a href="about.html">
+        <h4>About Our Milk</h4>
+      </a>
+      <a href="form.html">
+        <h4>Contact Us</h4>
+      </a>
+    </nav>
+  </header>
+
+  <div class="shoppy">
+    <div class="shoppytext">
+      <h1>Shop Milk</h1>
+      <p>You want Milk™? We got it. So many delicious milk flavors that you won't be able to believe it. Check
+        them out below, and if you don't buy at least 3, we'll send you 30 as a consolation.
+        <br>
+        <br>
+        Milk™ is not just
+        from cows, but all sorts of creatures. If you’re looking for a specific creature’s milk, let us know!
+      </p>
     </div>
+    <div class="milkback"></div>
+    <div class="blackback"></div>
+  </div>
 
-    <div class="shoppy">
-        <div class="shoppytext">
-            <h1>Shop Milk</h1>
-            <p>You want Milk™? We got it. So many delicious milk flavors that you won't be able to believe it. Check
-                them out below, and if you don't buy at least 3, we'll send you 30 as a consolation.
-                <br>
-                <br>
-                Milk™ is not just
-                from cows, but all sorts of creatures. If you’re looking for a specific creature’s milk, let us know!
-            </p>
-        </div>
-        <div class="milkback"></div>
-        <div class="blackback"></div>
-    </div>
-
-    <div class="container">
-        <div class="shop">
-            <div class="shopflavors">
-                <div class="milked">
-                    <div class="mflavors">
-                        <img src="../images/Image 3.png" alt="" id="fire">
-                        <div class="flavtext">
-                            <h1 id="hotshop">Hot</h1>
-
-                            <p>Just like Little Caesar's, this Milk is hot and ready. Straight from the pipes and piping
-                                hot, this Milk is full of a full-bodied, salty flavor. You'll love the way it feels when
-                                it
-                                hits your lips, and if you don't, you probably just don't like Milk in general.
-                                <br>
-                                <br>
-                                Also, this Milk is spicy.
-                            </p>
-
-                            <button class="buy" disabled>
-                                <span class="material-icons">
-                                    block
-                                </span>
-                                Sold Out
-                            </button>
-                        </div>
-                    </div>
-
-                    <div class="mflavors">
-                        <img src="../images/Image 4.png" alt="" id="ice">
-                        <div class="flavtext">
-                            <h1 id="coldshop">Cold</h1>
-
-                            <p>Not a fan of the warmth? Maybe try the cold! Our cold Milk is not fresh. It has been
-                                sitting
-                                in a cold storage container for a minimum of 4 years, ensuring that all of the little
-                                critters inside are dead as dead can be. If you don't like Milk, you probably won't like
-                                this either.
-                                <br>
-                                <br>
-                                This Milk is not spicy.
-                            </p>
-
-                            <button class="buy" disabled>
-                                <span class="material-icons">
-                                    block
-                                </span>
-                                Sold Out</button>
-                        </div>
-                    </div>
-
-                    <div class="mflavors">
-                        <img src="../images/Image 5.png" alt="" id="recycle">
-                        <div class="flavtext">
-                            <div id="recyclegrid">
-                                <h1 id="recycleshop">Recycled</h1>
-                                <h5 id="shoplabel">(NOT GOOD)</h5>
-                            </div>
-
-
-                            <p>Uh oh! You've been MILKED! This Milk is gross and absolutely repulsive. It really is not
-                                good, and we don't recommend it. That said, some people do like it. Maybe. Honestly,
-                                this
-                                Milk is what we've had lying around leftover on the floor.
-                                <br>
-                                <br>
-                                Sometimes this Milk is spicy, but
-                                mostly due to the dirt.
-                            </p>
-
-                            <button class="buy" disabled>
-                                <span class="material-icons">
-                                    block
-                                </span>
-                                Sold Out</button>
-                        </div>
-                        </h3>
-                    </div>
-                </div>
-
-                <div class="note">
-                    <h3>Please Note</h3>
-                    <p>We are currently sold out of many of our products. To know when we are back in stock, sign up for
-                        our
-                        email newsletter on the <a id="learn" href="../index.html">home page </a>.</p>
-
-                </div>
+  <div class="container">
+    <div class="shop">
+      <div class="shopflavors">
+        <div class="milked">
+          <div class="mflavors">
+            <div class="image-wrapper" id="fire">
+              <img src="../images/fire.png" alt="">
             </div>
-        </div>
-    </div>
+            <div class="flavtext">
+              <h1 id="hotshop">Hot</h1>
 
-    <div class="footer">
-        <div id="rights">
-            <img src="../images/milkstore-logo.svg" alt="cummy">
-            <p>© CumStore, 2022. All rights reserved.</p>
+              <p>Just like Little Caesar's, this Milk is hot and ready. Straight from the pipes and piping
+                hot, this Milk is full of a full-bodied, salty flavor. You'll love the way it feels when
+                it
+                hits your lips, and if you don't, you probably just don't like Milk in general.
+                <br>
+                <br>
+                Also, this Milk is spicy.
+              </p>
+
+              <button class="buy" disabled>
+                <span class="material-icons">
+                  block
+                </span>
+                Sold Out
+              </button>
+            </div>
+          </div>
+
+          <div class="mflavors">
+            <div class="image-wrapper" id="ice">
+              <img src="../images/ice.png" alt="">
+            </div>
+            <div class="flavtext">
+              <h1 id="coldshop">Cold</h1>
+
+              <p>Not a fan of the warmth? Maybe try the cold! Our cold Milk is not fresh. It has been
+                sitting
+                in a cold storage container for a minimum of 4 years, ensuring that all of the little
+                critters inside are dead as dead can be. If you don't like Milk, you probably won't like
+                this either.
+                <br>
+                <br>
+                This Milk is not spicy.
+              </p>
+
+              <button class="buy" disabled>
+                <span class="material-icons">
+                  block
+                </span>
+                Sold Out</button>
+            </div>
+          </div>
+
+          <div class="mflavors">
+            <div class="image-wrapper" id="recycle">
+              <img src="../images/recycle.png" alt="">
+            </div>
+            <div class="flavtext">
+              <div id="recyclegrid">
+                <h1 id="recycleshop">Recycled</h1>
+                <h5 id="shoplabel">(NOT GOOD)</h5>
+              </div>
+
+
+              <p>Uh oh! You've been MILKED! This Milk is gross and absolutely repulsive. It really is not
+                good, and we don't recommend it. That said, some people do like it. Maybe. Honestly,
+                this
+                Milk is what we've had lying around leftover on the floor.
+                <br>
+                <br>
+                Sometimes this Milk is spicy, but
+                mostly due to the dirt.
+              </p>
+
+              <button class="buy" disabled>
+                <span class="material-icons">
+                  block
+                </span>
+                Sold Out</button>
+            </div>
+            </h3>
+          </div>
         </div>
-        <div id="socials">
-            <img src="../images/instagram-brands.svg" alt="">
-            <img src="../images/facebook-brands.svg" alt="">
+
+        <div class="note">
+          <h3>Please Note</h3>
+          <p>We are currently sold out of many of our products. To know when we are back in stock, sign up for
+            our
+            email newsletter on the <a id="learn" href="../index.html">home page </a>.</p>
+
         </div>
+      </div>
     </div>
+  </div>
+
+  <footer>
+    <img src="images/milkyway-logo.png" alt="MilkyWay logo">
+    <p>&copy; MilkyWay, 2022. All rights reserved.</p>
+  </footer>
 
 
 
