--- a/public/pages/form.html
+++ b/public/pages/form.html
@@ -2,88 +2,86 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Milk Store</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../css/mystyles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact | Milk Store</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="../css/mystyles.css">
 </head>
 
 <body>
-    <div class="header">
-        <a href="../index.html">
-            <img src="../images/milkstore-logo.svg" alt="cummy" id="start">
-        </a>
+  <header>
+    <a href="../index.html">
+      <img src="../images/milkyway-logo.png" alt="MilkyWay logo">
+    </a>
+    <nav>
+      <a href="shop.html">
+        <h4>Shop Milk</h4>
+      </a>
+      <a href="about.html">
+        <h4>About Our Milk</h4>
+      </a>
+      <a href="form.html" class="active">
+        <h4>Contact Us</h4>
+      </a>
+    </nav>
+  </header>
 
-        <div class="linka">
-            <a href="shop.html">
-                <h4>Shop Milk</h4>
-            </a>
-            <a href="about.html">
-                <h4>About Our Milk</h4>
-            </a>
-            <a href="form.html" class="active">
-                <h4>Contact Us</h4>
-            </a>
-        </div>
+
+
+  <div class="contact">
+    <img src="../images/milk-pour.png" alt="">
+    <div id="contactin">
+      <h2>Come get creamy!</h1>
+        <p>Fill out the form below, and we’ll get back to you ASAP!</p>
+
+        <form id="contactform">
+          <!-- Form  -->
+
+          <div class="input-wrapper">
+            <input type="text" placeholder="First name" />
+          </div>
+
+          <div class="input-wrapper">
+            <input type="text" placeholder="Last name" />
+          </div>
+
+          <div class="input-wrapper">
+            <input type="text" placeholder="Email" />
+          </div>
+
+          <div class="input-wrapper">
+            <select>
+              <option value="" disabled selected>Your Favorite Milk Flavor</option>
+              <option>Hot</option>
+              <option>Cold</option>
+              <option>Recycled</option>
+            </select>
+          </div>
+
+          <div>
+            <textarea type="text" name="" placeholder="Your message to us..."></textarea>
+          </div>
+
+          <button type="submit">Send it!
+            <span class="material-icons">
+              send
+            </span>
+          </button>
+        </form>
     </div>
 
 
 
-    <div class="contact">
-        <img src="../images/milk-pour.png" alt="">
-        <div id="contactin">
-            <h2>Come get creamy!</h1>
-                <p>Fill out the form below, and we’ll get back to you ASAP!</p>
+  </div>
 
-                <form id="contactform">
-                    <!-- Form shit -->
-
-                    <div class="input-wrapper">
-                        <input type="text" placeholder="First name" />
-                    </div>
-
-                    <div class="input-wrapper">
-                        <input type="text" placeholder="Last name" />
-                    </div>
-
-                    <div class="input-wrapper">
-                        <input type="text" placeholder="Email" />
-                    </div>
-
-                    <div class="input-wrapper">
-                        <select>
-                            <option>Your Favorite Milk Flavor</option>
-                            <option>Hot</option>
-                            <option>Cold</option>
-                            <option>Recycled</option>
-                        </select>
-                    </div>
-
-                    <div>
-                        <textarea type="text" name="" placeholder="Your message to us..." id="textarea"></textarea>
-                    </div>
-
-                    <button type="submit">Send it!
-                        <span class="material-icons">
-                            send
-                        </span>
-                    </button>
-                </form>
-        </div>
-
-
-
-    </div>
-
-    </div>
+  </div>
 
 
 
@@ -92,16 +90,10 @@
 
 
 
-    <div class="footer">
-        <div id="rights">
-            <img src="../images/milkstore-logo.svg" alt="cummy">
-            <p>© CumStore, 2022. All rights reserved.</p>
-        </div>
-        <div id="socials">
-            <img src="../images/instagram-brands.svg" alt="">
-            <img src="../images/facebook-brands.svg" alt="">
-        </div>
-    </div>
+  <footer>
+    <img src="images/milkyway-logo.png" alt="MilkyWay logo">
+    <p>&copy; MilkyWay, 2022. All rights reserved.</p>
+  </footer>
 
 
 
