--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       <a href="pages/about.html">
         <h4>About Our Milk</h4>
       </a>
-      <a href="pages/form.html">
+      <a href="pages/contact.html">
         <h4>Contact Us</h4>
       </a>
     </nav>
