--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -27,16 +27,16 @@
       <a href="about.html" class="active">
         <h4>About Our Milk</h4>
       </a>
-      <a href="form.html">
+      <a href="contact.html">
         <h4>Contact Us</h4>
       </a>
     </nav>
   </header>
 
-  <div class="intromilk">
+  <section class="about-hero">
     <div class="container">
-      <div class="aboutmilk grid-2">
-        <div class="milktext">
+      <div class="about-grid">
+        <div class="about-text">
           <h1>About Our Milk</h1>
           <p>Milk is a nutrient-rich liquid food produced by the mammary glands of mammals. It is the primary
             source of nutrition for young mammals (including breastfed human infants) before they are able
@@ -47,42 +47,44 @@
             nutrients, including protein and lactose.</p>
         </div>
 
-        <img src="../images/milk-hands.png" alt="">
+        <img src="../images/milk-hands.png" alt="Photo of a glass of milk in a person's hands">
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="truth">
+  <section class="truth-section">
     <div class="container">
-      <div class="abouttruth grid-2">
-        <div>
-          <img id="cow" src="../images/cow-of-truth.png" alt="">
-        </div>
+      <div class="about-grid">
+        <img src="../images/cow-of-truth.png" alt="Photo of the cow of truth">
 
-        <div class="truthtext">
+        <div class="truth-text">
           <h1>The Truth</h1>
+
           <p>
             The milk-builds-strong-bones claim was not the first to collapse under scrutiny. In 2005, the
             Physicians Committee for Responsible Medicine (PCRM) petitioned the Federal Trade Commission
             (FTC)
             to examine industry advertising claiming that milk could cause weight loss.
-            <br>
-            <br>
+          </p>
+
+          <p>
             A multimillion-dollar,
             celebrity-filled ad campaign was based on the findings of a single Tennessee researcher who
             reported
             that, in small numbers of people, dieters who included milk in their low-calorie diet plans lost
             more weight than dieters who left milk out. Other researchers were not able to replicate the
             finding.
-            <br>
-            <br>
+          </p>
+
+          <p>
             In response to PCRM’s petition, the FTC’s Division of Advertising Practices met with U.S.
             Department of Agriculture staff who oversaw the campaign and representatives of the National
             Fluid
             Milk Processor Promotion Board and the National Dairy Promotion and Research Board who agreed to
             discontinue all advertising and other marketing activities involving weight-loss claims.
-            <br>
-            <br>
+          </p>
+
+          <p>
             The
             decision also applied to Dairy Management Inc., which was created to increase demand for
             U.S.-produced dairy products on behalf of America’s dairy product producers.
@@ -90,18 +92,16 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div>
-    <div class="more">
-      <h1>Want to know more?</h1>
-      <p>For everything you need to know about our Milk and the future of Milk, sign up for our email newsletter
-        using the form at the bottom of our <a id="learn" href="../index.html">home page.</a></p>
-    </div>
-  </div>
+  <section class="more-section">
+    <h1>Want to know more?</h1>
+    <p>For everything you need to know about our Milk and the future of Milk, sign up for our email newsletter
+      using the form at the bottom of our <a href="../index.html">home page.</a></p>
+  </section>
 
   <footer>
-    <img src="images/milkyway-logo.png" alt="MilkyWay logo">
+    <img src="../images/milkyway-logo.png" alt="MilkyWay logo">
     <p>&copy; MilkyWay, 2022. All rights reserved.</p>
   </footer>
 </body>
